<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="142dp"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/simplert"
            android:contentDescription="@string/logoDescription" />
        <EditText
            android:id="@+id/etUser"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:ems="10"
            android:autofillHints="username"
            android:hint="@string/user_name"
            android:inputType="textAutoComplete" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:ems="10"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:ems="10"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/etAlreadyAc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingLeft="20dp"
            android:layout_marginLeft="80dp"
            android:gravity="left"
            android:text="@string/have_account" />



            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign up"
                android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnSignUpGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up with Google"
            android:layout_marginTop="10dp"/>


        </LinearLayout>

</LinearLayout>