<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="142dp"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/simplert"
            android:contentDescription="@string/logoDescription" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:ems="10"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:ems="10"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/clickToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingLeft="20dp"
            android:layout_marginLeft="80dp"
            android:gravity="left"
            android:text="Click to Signup" />



        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnSignInGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in with Google"
            android:layout_marginTop="10dp"/>


    </LinearLayout>



</LinearLayout>